--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -51,15 +51,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3.png" alt="">
                 </div>
 
               </div>
@@ -71,17 +71,25 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: VR Design</li>
+                <li><strong>Client</strong>: US FDA</li>
+                <li><strong>Project date</strong>: 17 March, 2024</li>
+                <li><strong>Project URL</strong>: <a href="#">https://caps.luminad.com:8443/stockage/stock/SPIE/LDL-SPIE-JMI-24070SSRR/JMI-24070SSRR_online.pdf</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Impact</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                This work is developed by Khushi Bhansali with mentorship of Chumin Zhao at US FDA. It has been published at IEEE VR 2024 and is a regulatory science tool at US FDA. The mention of commercial products, their sources, or their use in connection with material reported herein is not to be construed as either an actual or implied endorsement of such products by the Department of Health and Human Services.
               </p>
+                
+            <h2>Abstract</h2>
+              <p>
+                Virtual reality (VR) creates an immersive experience by rendering a pair of graphical views on a head-mounted display (HMD). However, spatial variation of image quality on VR HMDs can potentially lead to nonuniform monocular views and binocular disparity. In this study, we begin to bridge the gap between monocular and binocular image quality evaluation by developing a WebXR test platform to perform human observer experiments. Specifically, monocular and binocular contrast sensitivity functions (CSFs) are obtained using varied interpupillary distance (IPD) conditions. The result demonstrates that monocular image quality degrades when gazing at the periphery of display field of view (FOV) especially for mismatched IPD settings. Binocular contrast perception is dominated by the monocular view on a VR HMD with superior image quality measured by the contrast. 
+              </p>
+            <h2>Results</h2>
+            <p>
+                For human subjects using the appropriate IPD configuration on the HMD, the CSF is optimized at the center of display FOV. It has been reported that optical aberration of the HMD lens degrades the contrast and effective resolution at the periphery of VR display FOV, resulting in degraded CSFs for targets away from the center location. IPD misalignment, where the IPD of the subject does not match physical lens displacement of the HMD, negatively affects the monocular image quality. Interocular contrast sensitivity variation is substantially pronounced for subjects with larger IPD than that of the HMD, where the measured CSF favors nasal eye rotation (e.g., right eye rotating towards left). It is also demonstrated that binocular CSF does not always equal to the monocular perception. The difference is particularly enhanced for misaligned IPD between the human subject and HMD optics.</p>
             </div>
           </div>
 
