--- a/index.html
+++ b/index.html
@@ -530,8 +530,7 @@
       <h3>Khushi Bhansali</h3>
       <p>A Software/ML Engineer by trade, an artist by passion. Reach out if you want to create impactful technological art together. </p>
       <div class="social-links">
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/khushi-bhansali/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
