Added Aero Project

--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -92,7 +92,8 @@
                 <li><strong>Category</strong>: VR Design</li>
                 <li><strong>Client</strong>: L'Oréal Brandstorm</li>
                 <li><strong>Project date</strong>: 1st May, 2023</li>
-                <li><strong>Project URL</strong>: <a href="#">https://www.loreal.com/en/brandstorm-2023/brandstorm-2023-finalists-project-urmodel/</a></li>
+                <li><strong>Project URL</strong>: Brandstorm Finalists <a href="https://www.loreal.com/en/brandstorm-2023/brandstorm-2023-finalists-project-urmodel"></a></li>
+                <li> <strong>Pitch URL: </strong>: <a href="https://adobeaero.app.link/0RuOlNkOLNb">AR Experience</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
