Update bio and roles

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-<!--          <p>Graduating from Cornell Univeristy with a Masters, Khushi hopes leverage the creative power of art and design to enhance technological advancements for societal betterment, focusing on the integration of wearables, machine learning, and VR technologies.</p>-->
+<!--          <p>Recent graduate from Cornell with a specialization in machine learning engineering, software engineering, and interactive device design, I aim to cultivate a future where innovative artistry and design principles drive the evolution of technology and foster inclusive, immersive, and impactful experiences for individuals and communities.</p>-->
         </div>
 
         <div class="row">
@@ -88,9 +88,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Machine Learning Engineer </h3>
-            <p class="fst-italic">
-              Graduating from Cornell University with a Masters in Computer Science, Khushi hopes leverage the creative power of art and design to enhance technological advancements for societal betterment, focusing on the integration of wearables, machine learning, and VR technologies.
+            <h3>Quantitative Model Development Analyst Senior </h3>
+            <p class="fst-italic"> 
+               In my current role at PNC Bank, I apply statistical modeling and fraud detection techniques to enhance financial integrity, building solutions that are as impactful as they are forward-thinking. My journey—from developing immersive XR projects at the FDA to tackling complex financial challenges at Goldman Sachs and PNC—reflects a commitment to using cutting-edge tech to shape a more inclusive and creative future.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -118,73 +118,6 @@
       </div>
     </section><!-- End About Section -->
 
-   
-
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>My proficiency in a diverse tech stack, including Python, Java, JavaScript, and SQL, along with HTML/CSS, equips me with the versatility to design intuitive UI/UX and harness data effectively. My deep understanding of machine learning and data science libraries and frameworks, such as PyTorch, TensorFlow, and Scikit-Learn, coupled with experience in project management tools and agile methodologies, enables me to drive innovation and efficiency in development projects.</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">Python, PyTorch, TensorFlow, Pandas, Numpy <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">React <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript, HTML, CSS <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">Java <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop & Figma <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-              
-              <div class="progress">
-              <span class="skill">Unity, C# <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -222,23 +155,24 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+    
             <div class="resume-item">
-              <h4>Indian Folk Art Teacher</h4>
-              <h5>2024 - Present</h5>
-              <p><em>India School, Bethesda, MD </em></p>
-              <ul>
-                  <li>Instruct a class of 20 students on the history and techniques of Madhubani painting, fostering creativity and an appreciation for Indian folk art. </li>
-              </ul>
-              </div>
-            <div class="resume-item">
-              <h4>Model Development and Quantitative Analyst</h4>
+              <h4>Quantitative Model Development Analyst Senior</h4>
               <h5>2024 - Present</h5>
               <p><em>PNC Bank, Tyson's Corner, Virginia </em></p>
               <ul>
                 <li> Implementing a Debit Card Fraud Detection Model, enhancing fraud detection accuracy through model optimization and feature engineering to address inefficiencies in the current strategy.</li>
-                <li>Utilized Toad Data Point, Hive, and Impala to perform complex SQL queries, comparing key Debit Card Fraud model features against a temporary database, ensuring model integrity and feature consistency.</li>
-                <li> Conducted CCEL production readiness assessments, performing rigorous controls and line-of-business requirement analyses, ensuring compliance and operational preparedness.</li>
+                <li> Leveraged Spark, Hive, and Impala to validate Debit Card Fraud model scores against third-party solutions, measuring the financial impact of fraud prevention efforts.</li>
+                <li> Conducted CECL production readiness assessments, performing rigorous controls and line-of-business requirement analyses, ensuring compliance and operational preparedness.</li>
                 </ul>
+              </div>
+            <div class="resume-item">
+              <h4>Indian Folk Art Teacher</h4>
+              <h5>2024 - 2024</h5>
+              <p><em>India School, Bethesda, MD </em></p>
+              <ul>
+                  <li>Taught a class of 10 kids aged 3 to 7 about the history and techniques of traditional Rajasthani painting, inspiring creativity and love for Indian folk art. </li>
+              </ul>
               </div>
             <div class="resume-item">
               <h4>VR Developer</h4>
