--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Quantitative Model Development Analyst Senior </h3>
             <p class="fst-italic"> 
-               In my current role at PNC Bank, I apply statistical modeling and fraud detection techniques to enhance financial integrity, building solutions that are as impactful as they are forward-thinking. My journey—from developing immersive XR projects at the FDA to tackling complex financial challenges at Goldman Sachs and PNC—reflects a commitment to using cutting-edge tech to shape a more inclusive and creative future.
+               In my current role at PNC Bank, I apply statistical modeling and fraud detection techniques to enhance financial integrity, building solutions that are as impactful as they are forward-thinking. My journey—from developing immersive XR projects at the FDA to tackling complex financial challenges at Goldman Sachs and PNC—reflects a commitment to using cutting-edge tech to shape a more inclusive and creative future. My vision is to cultivate a future where innovative artistry and design principles drive the evolution of technology, fostering inclusive, immersive, and impactful experiences for individuals and communities worldwide.
+
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -98,20 +99,18 @@
                   
                   <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>https://github.com/Khushibhansali</span></li>
      
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Washington DC-Baltimore Area</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li> <i class="bi bi-chevron-right"></i><strong>Degree:</strong> <span>Master's in Engineering</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kb737@cornell.edu</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>bhansali.khushi19@gmail.com </span></li>
 
                 </ul>
               </div>
             </div>
-            <p>
-              My vision is to cultivate a future where innovative artistry and design principles drive the evolution of technology, fostering inclusive, immersive, and impactful experiences for individuals and communities worldwide.
-            </p>
+  
           </div>
         </div>
 
@@ -141,7 +140,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master's of Engineering &amp; Computer Science</h4>
+              <h4>Master's of Engineering in Computer Science</h4>
               <h5>2023 - 2024</h5>
               <p><em> Cornell Tech (Cornell University), NY</em></p>
               <p>Chroma Art Club President | Machine Learning Engineering | 3D User Interfaces| Natural Language Processing | Computer Vision - Implemented advanced image processing using algorithms such as SIFT and Photometric Stereo for geometry recovery, robust image comparison, and panoramic stitching, enhancing 3D rendering and recognition systems.</p>
