--- a/portfolio-details7.html
+++ b/portfolio-details7.html
@@ -75,13 +75,14 @@
               <ul>
                 <li><strong>Category</strong>: IOT Project</li>
                 <li><strong>Client</strong>: Independent Artwork</li>
+                <li><strong>Full Project Documentation: <a href="https://github.com/Khushibhansali/Interactive-Lab-Hub/tree/Fall2023/Lab%204">Github</strong></li>
               </ul>
             </div>
             <div class="portfolio-description">
             
             <h2>Abstract</h2>
             <p>
-               Developing this art and tech piece was an exciting and rewarding experience. I recreated The Scream, integrating interactive elements to enhance its eerie essence. By incorporating copper wire and electrically conductive paint, I transformed the classic painting into a Halloween-themed installation that plays different spooky soundtracks when activated. It’s a perfect fusion of art and technology. Be sure to check out the videos—with sound—for the full experience!</p>
+               Developing this art and tech piece was an exciting and rewarding experience. I recreated The Scream, integrating interactive elements to enhance its eerie essence. By incorporating copper wire and electrically conductive paint, I transformed the classic painting into a Halloween-themed installation that plays different spooky soundtracks when activated by touch. It’s a perfect fusion of art and technology. Be sure to check out the videos—with sound—for the full experience!</p>
             </div>
           </div>
 
